--- a/es-dms-site/yo/app/views/main.html
+++ b/es-dms-site/yo/app/views/main.html
@@ -11,7 +11,7 @@
 	      	<a href="#{{tab.view}}">{{tab.title}}</a>
 	      </li>
 	      <li data-ng-show="showLogout" class="divider-vertical"></li>
-				<li class="dropdown">
+				<li data-ng-show="hasRole('administrator')" class="dropdown">
 	      	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 	      	<ul class="dropdown-menu">
 	          <li data-ng-repeat="tab in adminTabs" data-match-route="{{tab.view}}">
