--- a/es-dms-site/yo/app/views/roles/search-roles.html
+++ b/es-dms-site/yo/app/views/roles/search-roles.html
@@ -10,6 +10,7 @@
     		<tr>
     			<th>Id</th>
     			<th>Name</th>
+                <th style="width: 10%">Status</th>
     			<th>Actions</th>
     		</tr>
     	</thead>
@@ -17,6 +18,7 @@
     		<tr data-ng-repeat="role in roles | filter: filter.name | orderBy: 'name'">
     			<td>{{ role.id }}</td>
     			<td>{{ role.name }}</td>
+                <td><span data-ng-show="role.disabled" class="label label-important">Disabled</span></td>
     			<td>
     				<button class="btn btn-primary" data-ng-click="edit(role.id)" data-toggle="modal" href="#editModal">
     					<i class="icon-pencil icon-white"></i> Edit
