--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -1,7 +1,7 @@
 <div class="container" data-ng-controller="DocumentCtrl">
 	<h2>Documents Search</h2>
 	<form data-ng-submit="search()" class="form-search">
-		<input type="text" data-ng-model="criteria" />
+		<input type="text" class="input-xlarge" data-ng-model="criteria" />
 		<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
 		<div data-ng-include src="'views/search/options.html'"></div>
 	</form>
