--- a/es-dms-site/yo/app/views/users/user-profile.html
+++ b/es-dms-site/yo/app/views/users/user-profile.html
@@ -16,6 +16,14 @@
 		</div>
 
 		<div class="control-group">
+			<!-- Login -->
+			<label class="control-label">Login:</label>
+			<div class="controls">
+				<input type="text" ng-model="user.login" placeholder="Login" />
+			</div>
+		</div>
+
+		<div class="control-group">
 			<!-- Email -->
 			<label class="control-label">Email:</label>
 			<div class="controls">
@@ -35,7 +43,7 @@
 		</div>
 
 		<div class="editable-buttons">
-			<button type="submit" class="btn btn-primary editsble-submit">
+			<button type="submit" class="btn btn-primary editable-submit">
 				<i class="icon-ok icon-white"></i>
 			</button>
 			<button type="button" class="btn editsble-cancel">
