--- a/es-dms-site/yo/app/views/users/edit-user.html
+++ b/es-dms-site/yo/app/views/users/edit-user.html
@@ -16,6 +16,12 @@
 				</div>
 			</div>
 			<div class="control-group">
+				<label class="control-label">Login:</label>
+				<div class="controls">
+					<input type="text" ng-model="user.login" placeholder="Login" />
+				</div>
+			</div>
+			<div class="control-group">
 				<label class="control-label">Email:</label>
 				<div class="controls">
 					<input type="text" ng-model="user.email" placeholder="Email" />
