--- a/es-dms-site/yo/app/views/documents/edit.html
+++ b/es-dms-site/yo/app/views/documents/edit.html
@@ -1,9 +1,6 @@
 <div class="container">
 	<br />
 	<div class="btn-group">
-		<!-- div data-ng-include src="'views/documents/new.html'" data-ng-controller="DocumentsNewCtrl"></div -->
-		<!-- div data-ng-include src="'views/documents/upload.html'" data-ng-controller="DocumentsUploadCtrl"></div -->
-		<div data-ng-include src="'views/documents/file-upload.html'"
-			data-ng-controller="DocumentsFileUploadCtrl"></div>
+		<div data-ng-include src="'views/documents/file-upload.html'"></div>
 	</div>
 </div>
