--- a/es-dms-site/yo/app/views/documents/file-upload.html
+++ b/es-dms-site/yo/app/views/documents/file-upload.html
@@ -1,37 +1,39 @@
-<div modal="shouldBeOpen" close="close()" options="opts">
-	<div class="modal-header">
-		<button type="button" class="close" data-ng-click="close()"
-			aria-hidden="true">&times;</button>
-		<h2>File Upload</h2>
-	</div>
-	<!-- form class="form-horizontal" action="api/documents/upload" enctype="multipart/form-data"
-				ng-upload -->
-	<div class="modal-body">
-		<div class="control-group">
-			<label class="control-label">File:</label> <span
-				class="btn btn-success fileinput-button"> <i
-				class="icon-plus icon-white"></i> <input type="file" name="file"
-				data-url="api/documents/upload" multiple esdms-upload><span>Add
-					files...</span>
-			</span>
+<div data-ng-controller="DocumentsFileUploadCtrl">
+	<div modal="shouldBeOpen" close="close()" options="opts">
+		<div class="modal-header">
+			<button type="button" class="close" data-ng-click="close()"
+				aria-hidden="true">&times;</button>
+			<h2>File Upload</h2>
 		</div>
-		<div>
-			<span ng-show="!files.length">No files selected</span>
-			<ul>
-				<li ng-repeat="file in files">{{file}}</li>
-			</ul>
+		<!-- form class="form-horizontal" action="api/documents/upload" enctype="multipart/form-data"
+					ng-upload -->
+		<div class="modal-body">
+			<div class="control-group">
+				<label class="control-label">File:</label> <span
+					class="btn btn-success fileinput-button"> <i
+					class="icon-plus icon-white"></i> <input type="file" name="file"
+					data-url="api/documents/upload" multiple esdms-upload><span>Add
+						files...</span>
+				</span>
+			</div>
+			<div>
+				<span ng-show="!files.length">No files selected</span>
+				<ul>
+					<li ng-repeat="file in files">{{file}}</li>
+				</ul>
+			</div>
+			<div class="progress" ng-show="percentage">
+				<div class="bar" style="width: {{percentage"></div>
+			</div>
 		</div>
-		<div class="progress" ng-show="percentage">
-			<div class="bar" style="width: {{percentage"></div>
+		<div class="modal-footer">
+			<button type="button" class="btn" data-ng-click="close()">Close</button>
+			<button type="submit" class="btn btn-primary pull-left"
+				ng-click="upload()">Upload</button>
 		</div>
+		<!-- /form -->
 	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn" data-ng-click="close()">Close</button>
-		<button type="submit" class="btn btn-primary pull-left"
-			ng-click="upload()">Upload</button>
-	</div>
-	<!-- /form -->
-</div>
 
-<button data-ng-click="open()" class="btn btn-primary">File
-	Upload</button>
+	<button data-ng-click="open()" class="btn btn-primary">File
+		Upload</button>
+</div>
