--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -47,7 +47,7 @@
 							<td>
 								<div>
 									<div data-ng-controller="DocumentsRatingCtrl" data-ng-init="getRating(document)">
-										<rating value="rating.score" max="5" on-hover="hoveringRating(value)" on-leave="addRating(document.id)"></rating> 
+										<rating value="rating.score" max="5"></rating> 
 									</div>
 								</div>
 								<div data-ng-switch="document.attributes.status"
