Fix document details pop-up not working.

--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -88,6 +88,5 @@
 		</div>
 	</div>
 	<div class="modal hide fade"
-		ng-include="'views/documents/details.html'" id="documents/details"
-		data-ng-controller="DocumentsDetailsCtrl"></div>
+		ng-include="'views/documents/details.html'" id="documents/details"></div>
 </div>
