--- a/es-dms-site/yo/app/views/documents/edit.html
+++ b/es-dms-site/yo/app/views/documents/edit.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<br />
 	<div class="btn-group">
-		<div data-ng-include src="'views/documents/file-upload.html'"></div>
+    <button data-ng-controller="ModalDocumentsFileUploadCtrl" data-ng-click="open()" class="btn btn-primary">File Upload</button>
 	</div>
 </div>
