--- a/es-dms-site/yo/app/views/roles/edit-role.html
+++ b/es-dms-site/yo/app/views/roles/edit-role.html
@@ -1,5 +1,4 @@
-<div data-ng-controller="RoleEditCtrl" modal="shouldBeOpen"
-	options="opts" close="close()">
+<div>
 	<div class="modal-header">
 		<button type="button" class="close" data-ng-click="close()"
 			aria-hidden="true">&times;</button>
