--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -89,7 +89,7 @@
 					</tbody>
 				</table>
 				<div data-ng-show="totalPages > 1">
-					<pagination total-items="totalHits" item-per-page="pageSize" page="currentPage" max-size="maxPages"></pagination>
+					<pagination total-items="totalHits" items-per-page="pageSize" page="currentPage" max-size="maxPages"></pagination>
 				</div>
 			</div>
 		</div>
