--- a/es-dms-site/yo/app/views/main.html
+++ b/es-dms-site/yo/app/views/main.html
@@ -24,7 +24,7 @@
 					data-ng-click="logout()">Logout</a></li>
 			</ul>
 			<p data-ng-show="user.name" class="navbar-text pull-right">
-				Logged in as <a href="#" class="navbar-link">{{ user.name }}</a>
+				Logged in as <a data-ng-click="showUserDetails()" class="navbar-link">{{ user.name }}</a>
 			</p>
 		</div>
 	</div>
