--- a/es-dms-site/yo/app/views/main.html
+++ b/es-dms-site/yo/app/views/main.html
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 
-	<div class="message-list" app-messages></div>
+	<toaster-container> </toaster-container>
 			
 	<!-- Placeholder for views -->
 	<div id="content" ui-view></div>
