--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -6,11 +6,9 @@
 		<div data-ng-controller="ModalSearchOptionsCtrl">
 			<a data-ng-click="open()">Options</a>
 		</div>
-
 	</form>
+
 	<br />
-	<alert data-ng-repeat="alert in alerts" type="alert.type"
-		close="closeAlert($index)">{{alert.msg}}</alert>
 	<div data-ng-show="totalHits">About {{ totalHits }} results -
 		search took {{ elapsedTime }} ms - items per page : {{ pageSize }}</div>
 	<div class="container-fluid">
@@ -40,8 +38,9 @@
 					</thead>
 					<tbody>
 						<tr data-ng-repeat="document in documents">
-							<td><esdms-tagging id="document.id" tags="document.tags"
-									newtag="newtag"></esdms-tagging></td>
+							<td>
+								<esdms-tagging id="document.id" tags="document.tags"></esdms-tagging>
+							</td>
 							<td>
 								<div data-ng-bind="document.name"></div>
 								<div>
@@ -64,23 +63,15 @@
 										class="caret"></span>
 									</a>
 									<ul data-ng-switch-when="A" class="dropdown-menu">
-										<li>
-											<a data-ng-click="showDetails(document.id)">Details</a>
-										<!--<a data-ng-click="showDetails(document.id)"
-											data-toggle="modal"
-											href="#documents/details/{{ document.id }}">Details</a --></li>
-										<li><a href="api/documents/{{ document.id }}/view"
-											target="_blank">View</a></li>
+										<li><a data-ng-click="showDetails(document.id)">Details</a></li>
+										<li><a href="api/documents/{{ document.id }}/view" target="_blank">View</a></li>
 										<li><a href="api/documents/{{ document.id }}/download">Download</a></li>
 										<li><a data-ng-click="checkout(document.id)">Check-Out</a></li>
 										<li><a data-ng-click="remove(document.id)">Delete</a></li>
 									</ul>
 									<ul data-ng-switch-when="L" class="dropdown-menu">
-										<li><a data-ng-click="showDetails(document.id)"
-											data-toggle="modal"
-											href="#documents/details/{{ document.id }}">Details</a></li>
-										<li><a href="api/documents/{{ document.id }}/view"
-											target="_blank">View</a></li>
+										<li><a data-ng-click="showDetails(document.id)">Details</a></li>
+										<li><a href="api/documents/{{ document.id }}/view" target="_blank">View</a></li>
 										<li><a href="api/documents/{{ document.id }}/download">Download</a></li>
 										<li><a data-ng-click="checkin(document.id)">Check-In</a></li>
 									</ul>
