--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -45,7 +45,7 @@
 								<div data-ng-bind="document.name"></div>
 								<div>
 									<esdms-start-process id="document.id"></esdms-start-process>
-									<esdms-preview preview="preview(document.id)" id="document.id"></esdms-preview>
+									<esdms-preview criteria="criteria" id="document.id"></esdms-preview>
 								</div>
 							</td>
 							<td>{{ document.attributes.author }}</td>
