New multi faceted search - Change namepace for search objects.

--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -8,18 +8,17 @@
 		</div>
 	</form>
 
-	<br />
 	<div data-ng-show="totalHits">About {{ totalHits }} results -
 		search took {{ elapsedTime }} ms - items per page : {{ pageSize }}</div>
+		<br/>
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<div class="span2">
 				<!--Sidebar content-->
 				<div class="well sidebar-nav" data-ng-show="facets">
-					<ul class="nav nav-list">
-						<li class="nav-header">{{ facet }}</li>
-						<li data-ng-repeat="term in facets.terms">
-							<esdms-facet term="term"></esdms-facet>
+					<ul class="nav nav-list" data-ng-repeat="facet in facets">
+						<li>
+							<esdms-facet facet="facet" />
 						</li>
 					</ul>
 				</div>
