--- a/es-dms-site/yo/app/views/users/edit-user.html
+++ b/es-dms-site/yo/app/views/users/edit-user.html
@@ -49,7 +49,7 @@
 				<div class="controls">
 					<div class="input-prepend">
 						<span class="add-on"><i class="icon-lock"></i></span> <input
-							type="password" data-ng-model="pw1" placeholder="Password" />
+							type="password" data-ng-model="password.pw1" placeholder="Password" />
 					</div>
 				</div>
 			</div>
@@ -58,7 +58,7 @@
 				<div class="controls">
 					<div class="input-prepend">
 						<span class="add-on"><i class="icon-lock"></i></span> <input
-							type="password" data-ng-model="pw2" placeholder="Password" />
+							type="password" data-ng-model="password.pw2" placeholder="Password" />
 					</div>
 				</div>
 			</div>
