Switch from select2 to ng-tags-input

--- a/es-dms-site/yo/app/styles/main.css
+++ b/es-dms-site/yo/app/styles/main.css
@@ -33,3 +33,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
 }
+/* Custom position for Toaster */
+.esdms-tag input[type=text] {
+  width: 10em;
+}
