--- a/es-dms-site/yo/app/views/documents/file-upload.html
+++ b/es-dms-site/yo/app/views/documents/file-upload.html
@@ -10,7 +10,7 @@
 				<label class="control-label">File:</label>
 				<span class="btn btn-success fileinput-button">
 					<i class="icon-plus icon-white"></i>
-					<input type="file" name="file" data-url="api/documents/upload" multiple esdms-upload>
+					<input type="file" name="file" data-url="api/documents/_upload" multiple esdms-upload>
 					<span>Add files...</span>
 				</span>
 			</div>
