--- a/es-dms-site/yo/app/styles/main.css
+++ b/es-dms-site/yo/app/styles/main.css
@@ -37,3 +37,16 @@ body {
 .esdms-tag input[type=text] {
   width: 10em;
 }
+
+.drop-box {
+  background: #F8F8F8;
+  border: 5px dashed #DDD;
+  width: 200px;
+  height: 65px; 
+  text-align: center;
+  padding-top: 35px; 
+}
+
+.drop-box.dragover {
+  border: 5px dashed blue;
+}
