--- a/es-dms-site/yo/app/styles/main.css
+++ b/es-dms-site/yo/app/styles/main.css
@@ -50,7 +50,7 @@ body {
   border: 5px dashed blue;
 }
 
-.my-container {
+.widget-container {
   background: #F8F8F8;
   border: 5px dashed #DDD;
 }
