Enabled drag'n drop with HTML5

--- a/es-dms-site/yo/app/views/documents/add-version.html
+++ b/es-dms-site/yo/app/views/documents/add-version.html
@@ -21,9 +21,9 @@
         </span>
       </div>
     </div>
-    <div class="control-group" ng-show="ddSupported">
-      <div class="drop-box" ng-file-drop="onFileSelect($files);" ng-show="ddSupported">drop files here</div>
-      <div ng-file-drop-available="dropSupported=true" ng-show="!ddSupported">HTML5 Drop File is not supported!</div>
+    <div class="control-group" ng-show="dropSupported">
+      <div class="drop-box" ng-file-drop="onFileSelect($files);" ng-show="dropSupported">drop files here</div>
+      <div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
     </div>
     <div class="control-group">
       <span ng-show="uploadMessage">{{ uploadMessage }}</span>
