Cleaning tag service - Prepare for atuocomplete

--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -1,4 +1,4 @@
-<div class="container my-container" data-ng-controller="DocumentCtrl">
+<div class="container widget-container" data-ng-controller="DocumentCtrl">
 	<h2>Documents Search</h2>
 	<form data-ng-submit="search()" class="form-search">
 		<input type="text" class="input-xlarge" data-ng-model="criteria" />
