--- a/es-dms-site/yo/app/views/test/tags.html
+++ b/es-dms-site/yo/app/views/test/tags.html
@@ -1,4 +1,4 @@
-<div class="container my-container" data-ng-controller="DocumentCtrl">
+<div class="container widget-container" data-ng-controller="DocumentCtrl">
 	<div class="container-fluid" ng-controller="WorldCloudCtrl">
 	<h2>Tags Search {{ selectedWord }}</h2>
 		<div class="row-fluid">
