--- a/es-dms-site/yo/app/views/search/tags.html
+++ b/es-dms-site/yo/app/views/search/tags.html
@@ -3,7 +3,7 @@
 	<h2>Tags Search {{ selectedWord }}</h2>
 		<div class="row-fluid">
 			<div class="span4">
-				<div id="wordCloud" class="cloud" data-words="cloud.words" data-live="live" 
+				<div id="wordCloud" class="esdms-word-cloud" data-words="cloud.words" data-live="live" 
 				data-interval="2000" data-callback="addSearchString">
 				</div>
 			</div>
